5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_1583.log
== TEST (2019-05-26 00:28:43) 
-- CODE:
str(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    str(num)
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:28:48) 
-- CODE:
str(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    str(num)
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:29:27) 
-- CODE:
str("Digite o numero: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    str(num)
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:31:33) 
-- CODE:
str("Digite o numero: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    str(num)
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:31:52) 
-- CODE:
s = input(str("Digite o numero: "))

-- OUTPUT:
Digite o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:37:10) 
-- CODE:
s = input(str("Digite o numero: "))
b=(s[0:3])
c=(s[3:6])
d=(s[6:])

-- OUTPUT:
Digite o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:38:01) 
-- CODE:
from numpy import*
s = input(str("Digite o numero: "))
b=(s[0:3])
c=(s[3:6])
d=(s[6:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:38:55) 
-- CODE:
from numpy import*
s = input(str("Digite o numero: "))
print(b=(s[0:3]))
print(c=(s[3:6]))
print(d=(s[6:]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:40:50) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
print(b=(s[0:3]))
print(c=(s[3:6]))
print(d=(s[6:]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:43:03) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
b=(s[0:3])
c=(s[3:6])
d=(s[6:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:44:06) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
print(s[0:3])
print(s[3:6])
print(s[6:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:45:47) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:46:05) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:46:16) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.44054
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:46:37) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:47:00) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.479147
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:47:40) 
-- CODE:
from numpy import*
s = input(str("Digite o numero: "))
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:47:49) 
-- CODE:
from numpy import*
s = input(str("Digite o numero: "))
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.553729
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
Digite o numero: 123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
Digite o numero: 123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
Digite o numero: 987.654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:50:27) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 00:50:38) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.454237
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:13:51) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
if(s%3==0 and s>=3):
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
File "XXXX", line 4
    d=(s[0:3])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:15:22) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
if(s%3==0 and s>=3):
	d=(s[0:3])
	b=(s[3:6])
	c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:16:23) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.497734
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
Digite o numero: 123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
Digite o numero: 987.654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:16:30) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.453105
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:16:30) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:18:14) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")
d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- EXECUTION TIME:
0.332441
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:51:49) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")

d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:54:32) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")

d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:55:03) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")

d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:55:09) 
-- CODE:
from numpy import*
s = input("Digite o numero: ")

d=(s[0:3])
b=(s[3:6])
c=(s[6:])
print(d + "." + b + "." + c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:53) 
-- CODE:
from numpy import*
s = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(v)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ v[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:20:34) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ v[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:20:55) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ v[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:21:33) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:21:36) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- EXECUTION TIME:
0.48035
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:21:49) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:21:57) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:13:20) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==3):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:13:24) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==3):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:13:46) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:14:01) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==2):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:14:10) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==2):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:14:20) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- EXECUTION TIME:
0.604821
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:21:14) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:21:45) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=0
s=""
while(c<len(j)):
	if(i==3):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:22:51) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- EXECUTION TIME:
0.370977
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:39:37) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:39:47) 
-- CODE:
from numpy import*
j = str(input("Digite o numero: "))
c=0
i=1
s=""
while(c<len(j)):
	if(i==4):
		i=1
		s= s+"."
	s= s+ j[c]
	i=i+1
	c=c+1
print(s)



-- EXECUTION TIME:
0.406173
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
